// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SourceWizardSummary component should render correctly amazon 1`] = `
<Fragment>
  <FormGroup
    fieldId="summary-name"
    label="name"
  >
    <TextInput
      aria-label={null}
      className=""
      id="summary-name"
      isDisabled={true}
      isReadOnly={false}
      isRequired={false}
      isValid={true}
      onChange={[Function]}
      type="text"
      value="openshift"
    />
  </FormGroup>
  <FormGroup
    fieldId="summary-type"
    label="Type"
  >
    <TextInput
      aria-label={null}
      className=""
      id="summary-type"
      isDisabled={true}
      isReadOnly={false}
      isRequired={false}
      isValid={true}
      onChange={[Function]}
      type="text"
      value="Amazon Web Services"
    />
  </FormGroup>
  <FormGroup
    label="Access Key ID"
  >
    <TextInput
      aria-label={null}
      className=""
      id="summary-id"
      isDisabled={true}
      isReadOnly={false}
      isRequired={false}
      isValid={true}
      onChange={[Function]}
      type="text"
      value="user_name"
    />
  </FormGroup>
  <FormGroup
    fieldId="summary-ssl-cert"
    label="Secret access key"
  >
    <TextInput
      aria-label={null}
      className=""
      id="summary-ssl-cert"
      isDisabled={true}
      isReadOnly={false}
      isRequired={false}
      isValid={true}
      onChange={[Function]}
      type="text"
      value="123456"
    />
  </FormGroup>
</Fragment>
`;

exports[`SourceWizardSummary component should render correctly ansible-tower 1`] = `
<Fragment>
  <FormGroup
    fieldId="summary-name"
    label="name"
  >
    <TextInput
      aria-label={null}
      className=""
      id="summary-name"
      isDisabled={true}
      isReadOnly={false}
      isRequired={false}
      isValid={true}
      onChange={[Function]}
      type="text"
      value="openshift"
    />
  </FormGroup>
  <FormGroup
    fieldId="summary-type"
    label="Type"
  >
    <TextInput
      aria-label={null}
      className=""
      id="summary-type"
      isDisabled={true}
      isReadOnly={false}
      isRequired={false}
      isValid={true}
      onChange={[Function]}
      type="text"
      value="Ansible Tower"
    />
  </FormGroup>
</Fragment>
`;

exports[`SourceWizardSummary component should render correctly openshift 1`] = `
<Fragment>
  <FormGroup
    fieldId="summary-name"
    label="name"
  >
    <TextInput
      aria-label={null}
      className=""
      id="summary-name"
      isDisabled={true}
      isReadOnly={false}
      isRequired={false}
      isValid={true}
      onChange={[Function]}
      type="text"
      value="openshift"
    />
  </FormGroup>
  <FormGroup
    fieldId="summary-type"
    label="Type"
  >
    <TextInput
      aria-label={null}
      className=""
      id="summary-type"
      isDisabled={true}
      isReadOnly={false}
      isRequired={false}
      isValid={true}
      onChange={[Function]}
      type="text"
      value="OpenShift Container Platform"
    />
  </FormGroup>
  <FormGroup
    fieldId="summary-url"
    label="URL"
  >
    <TextInput
      aria-label={null}
      className=""
      id="summary-url"
      isDisabled={true}
      isReadOnly={false}
      isRequired={false}
      isValid={true}
      onChange={[Function]}
      type="text"
      value="neznam.cz"
    />
  </FormGroup>
  <FormGroup
    fieldId="summary-ssl-cert"
    label="SSL Certificate"
  >
    <TextInput
      aria-label={null}
      className=""
      id="summary-ssl-cert"
      isDisabled={true}
      isReadOnly={false}
      isRequired={false}
      isValid={true}
      onChange={[Function]}
      type="text"
      value="authority"
    />
  </FormGroup>
</Fragment>
`;
